compiler/src/test/resources/golden/errors/prop_on_non_option.err
error: `?` needs an Option or Result, got Int
  --> prop_on_non_option.dawn:2:11
  |
2 |   let x = n?
  |           ^^
